# dogs-generator-bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: causes.json  main.py  parse.py
