[tool.poetry]
name = "dogsenerator"
version = "0.1.0"
description = ""
authors = ["evgenii.uvarov <evgenii.uvarov.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
python-telegram-bot = "13.15"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
